# TermAPI

./: .gitignore  CMakeLists.txt  README.md  TermAPI.sln
TermAPI/: ANSIDefs.h  ColorLib.hpp  ColorPalette.hpp  ControlEventHandler.hpp  FormatFlag.hpp  Layer.hpp  LineCharacter.hpp  Message.hpp  Sequence.hpp  SequenceDefinitions.hpp  TERMAPI.h  TermAPI.hpp  TermAPI.vcxitems  TermAPI.vcxitems.filters  TermAPIQuery.hpp  TermAPIWin.hpp  color-values.h  colorfile.hpp  format-functions.hpp  mainpage.md  setcolor.hpp  sysarch.h
TermAPIUnitTests/: SequenceTest.hpp  TermAPIUnitTests.vcxproj  TermAPIUnitTests.vcxproj.filters  pch.h  test.cpp
TermAPI_Testing/: TermAPI_Testing.vcxproj  main.cpp
TermAPI_UnitTests/: TermAPI_UnitTests.cpp  TermAPI_UnitTests.vcxproj  TermAPI_UnitTests.vcxproj.filters  pch.h
html/: _a_n_s_i_defs_8h.html  _a_n_s_i_defs_8h_source.html  _color_lib_8hpp.html  _color_lib_8hpp_source.html  _color_palette_8hpp.html  _color_palette_8hpp_source.html  _control_event_handler_8hpp.html  _control_event_handler_8hpp__incl.map  _control_event_handler_8hpp__incl.md5  _control_event_handler_8hpp_source.html  _cursor_origin_8h.html  _cursor_origin_8h__dep__incl.map  _cursor_origin_8h__dep__incl.md5  _cursor_origin_8h_source.html  _format_flag_8hpp.html  _format_flag_8hpp_source.html  _layer_8hpp.html  _layer_8hpp_source.html  _line_character_8hpp.html  _line_character_8hpp__incl.map  _line_character_8hpp__incl.md5  _line_character_8hpp_source.html  _message_8hpp.html  _message_8hpp.js  _message_8hpp__incl.map  _message_8hpp__incl.md5  _message_8hpp_source.html  _sequence_8hpp.html  _sequence_8hpp__dep__incl.map  _sequence_8hpp__dep__incl.md5  _sequence_8hpp__incl.map  _sequence_8hpp__incl.md5  _sequence_8hpp_source.html  _sequence_definitions_8hpp.html  _sequence_definitions_8hpp.js  _sequence_definitions_8hpp__dep__incl.map  (+357 more)
(+108 files in other folders)
